Oppgrader til JDK 17